# pessimistic-concurrency-control

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
persons_queue/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
persons_queue/management/commands/: create_superuser.py
persons_queue/migrations/: 0001_initial.py
