[tool.poetry]
name = "django_concurrency_control_db_wrintings"
version = "0.1.0"
description = ""
authors = ["Cristian Alvarez H <cristian.alvarez@simetrik.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
